[package]
name = "tower-test"
version = "0.1.0"
authors = ["djp <duanjp8617@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "test3"
path = "src/test3.rs"

[[bin]]
name = "test4"
path = "src/test4.rs"

[[bin]]
name = "test5"
path = "src/test5.rs"


[[bin]]
name = "test6"
path = "src/test6.rs"

[[bin]]
name = "test7"
path = "src/test7.rs"

[[bin]]
name = "test8"
path = "src/test8.rs"

[[bin]]
name = "test9"
path = "src/test9.rs"

[[bin]]
name = "test10"
path = "src/test10.rs"

[[bin]]
name = "test11"
path = "src/test11.rs"

[[bin]]
name = "test12"
path = "src/test12.rs"


[dependencies]

tokio = { version = "0.2", features = ["full"] }

tower = "0.3"
tower-service = "0.3"

futures-core = "0.3"
futures-util = "0.3"
futures-task = "0.3"

hdrhistogram = "6.0"
pin-project = "0.4.17"
rand = "0.7"

tracing = "0.1.2"
tracing-subscriber = "0.1.1"

http = "0.2"
